--- a/sections/main-collection-product.liquid
+++ b/sections/main-collection-product.liquid
@@ -1,9 +1,51 @@
+{% liquid
+    assign new_badge = section.settings.new_badge
+    assign show_vendor = section.settings.show_vendor
+    assign show_rating = section.settings.show_rating
+    assign add_btn = section.settings.enable_add_btn
+    assign btn = section.settings.btn
+    assign variant_type = section.settings.variant
+    assign prod_img_size = section.settings.prod_img_size
+
+    assign price_variant = false
+    if btn == 'quick'
+        assign price_variant = true
+    endif
+
+    assign bg_color = section.settings.bg_color | default: 'transparent'
+
+    assign text_color = section.settings.text_color | default: 'inherit'
+    assign title_color = section.settings.title_color | default: 'inherit'
+    assign link_color = section.settings.link_color | default: 'inherit'
+
+    assign content_alignment = section.settings.content_alignment
+    assign full_width = section.settings.full_width
+
+    assign width = section.settings.width
+    assign pad_top = section.settings.padding_top
+    assign pad_bot = section.settings.padding_bottom
+%}
+
+{% capture styles %}
+    --background-color-collections: {{ bg_color }};
+    --title-post-color-collections: {{ title_color }};
+    --text-post-color-collections: {{ text_color }};
+    --link-post-color-collections: {{ link_color }};
+
+    --width-collections: {{ width }}px;
+    --pad-top-collections: {{ pad_top }}px;
+    --pad-bot-collections: {{ pad_bot }}px;
+{% endcapture %}
+
+{%- assign styles = styles | strip_newlines -%}
+
 {{ 'section-main-collection.css' | asset_url | stylesheet_tag }}
 {{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
+{{ 'component-rating.css' | asset_url | stylesheet_tag }}
 
-<div class="main-collections">
+<div class="main-collections full_width--{{ full_width }} content--{{ content_alignment }}" style="{{ styles }}">
     {%- paginate collection.products by section.settings.products_per_page -%}
-        <div class="{% if section.settings.filter_type == 'vertical' %} facets-vertical page-width{% endif %}">
+        <div class="main-collections__wrapper {% if section.settings.filter_type == 'vertical' %} facets-vertical page-width{% endif %}">
             {{ 'component-facets.css' | asset_url | stylesheet_tag }}
             <script src="{{ 'facets.js' | asset_url }}" defer="defer"></script>
             {%- if section.settings.enable_filtering or section.settings.enable_sorting -%}
@@ -102,10 +144,10 @@
                         <grid-list-view class="main-collections__view mobile-style">
                             <span>{{- 'products.facets.view_as' | t -}}</span>
                             <a
-                                class="active main-collections__grid js-grid-view"
+                                class="active main-collections__grid js-view-button js-grid-view"
                                 href="#"
                                 title="{{- 'products.facets.list' | t -}}"
-                                data-original-title="Grid"
+                                data-view="grid"
                             >
                                 {%- render 'icons-svg', icons: 'grid' -%}
                                 {%- render 'icons-svg', icons: 'grid' -%}
@@ -113,10 +155,10 @@
                                 {%- render 'icons-svg', icons: 'grid' -%}
                             </a>
                             <a
-                                class="main-collections__list js-list-view"
+                                class="main-collections__list js-view-button js-list-view"
                                 href="#"
                                 title="{{- 'products.facets.grid' | t -}}"
-                                data-original-title="List"
+                                data-view="list"
                             >
                                 {%- render 'icons-svg', icons: 'list' -%}
                             </a>
@@ -145,8 +187,9 @@
                             id="product-grid"
                             data-id="{{ section.id }}"
                             class="
-                                grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
-                                grid--{{ section.settings.columns_desktop }}-col-desktop
+                                template-main-collection__list
+                                grid product-grid columns-mobile--{{ section.settings.columns_mobile }}
+                                columns--{{ section.settings.columns_desktop }}
                             "
                         >
                             {%- for product in collection.products -%}
@@ -154,8 +197,21 @@
                                 {%- if forloop.index > 2 -%}
                                     {%- assign lazy_load = true -%}
                                 {%- endif -%}
-                                <li class="grid__item">
-                                    {{ product.title }}
+                                <li class="grid__item template-main-collection__item">
+                                    {% render 'card-product',
+                                        product: product,
+                                        show_vendor: show_vendor,
+                                        show_rating: show_rating,
+                                        new_badge: new_badge,
+                                        show_quantity: false,
+                                        use_variant: price_variant,
+                                        variant_type: variant_type,
+                                        add_btn: add_btn,
+                                        btn: btn,
+                                        img_size: prod_img_size,
+                                        image_custom: false,
+                                        fill: false
+                                    %}
                                 </li>
                             {%- endfor -%}
                         </ul>
@@ -178,50 +234,142 @@
         {
             "type": "range",
             "id": "products_per_page",
-            "min": 8,
+            "min": 6,
             "max": 24,
-            "step": 4,
+            "step": 1,
             "default": 16,
             "label": "t:sections.main-collection-product-grid.settings.products_per_page.label"
         },
         {
             "type": "range",
             "id": "columns_desktop",
-            "min": 1,
+            "min": 3,
             "max": 5,
             "step": 1,
             "default": 4,
             "label": "t:sections.main-collection-product-grid.settings.columns_desktop.label"
         },
         {
+            "type": "checkbox",
+            "id": "full_width",
+            "default": false,
+            "label": "Enabled full width?"
+        },
+        {
+            "type": "range",
+            "id": "width",
+            "min": 1000,
+            "max": 1800,
+            "step": 40,
+            "default": 1200,
+            "unit": "px",
+            "label": "Section Width"
+        },
+        {
+            "type": "select",
+            "id": "content_alignment",
+            "options": [
+                {
+                    "value": "left",
+                    "label": "Left"
+                },
+                {
+                    "value": "center",
+                    "label": "Center"
+                },
+                {
+                    "value": "right",
+                    "label": "Right"
+                }
+            ],
+            "default": "left",
+            "label": "Text alignment"
+        },
+        {
             "type": "header",
             "content": "t:sections.main-collection-product-grid.settings.header__3.content"
         },
         {
-            "type": "select",
-            "id": "image_ratio",
-            "options": [
-                {
-                    "value": "adapt",
-                    "label": "t:sections.main-collection-product-grid.settings.image_ratio.options__1.label"
-                },
-                {
-                    "value": "portrait",
-                    "label": "t:sections.main-collection-product-grid.settings.image_ratio.options__2.label"
-                },
-                {
-                    "value": "square",
-                    "label": "t:sections.main-collection-product-grid.settings.image_ratio.options__3.label"
-                }
-            ],
-            "default": "adapt",
-            "label": "t:sections.main-collection-product-grid.settings.image_ratio.label"
+            "type": "range",
+            "id": "new_badge",
+            "min": 10,
+            "max": 100,
+            "step": 1,
+            "default": 10,
+            "unit": "day",
+            "label": "'New' products badge",
+            "info": "Number of days for which the product is considered as \"New\""
         },
         {
             "type": "checkbox",
             "id": "show_secondary_image",
             "default": false,
             "label": "t:sections.main-collection-product-grid.settings.show_secondary_image.label"
+        },
+        {
+            "type": "checkbox",
+            "id": "enable_add_btn",
+            "default": false,
+            "label": "Enable add to cart button"
+        },
+        {
+            "type": "select",
+            "id": "btn",
+            "default": "details",
+            "label": "Link or Quick add to cart",
+            "options": [
+                {
+                    "value": "quick",
+                    "label": "Quick add to cart"
+                },
+                {
+                    "value": "details",
+                    "label": "Details"
+                }
+            ]
+        },
+        {
+            "type": "select",
+            "id": "variant",
+            "default": "pills",
+            "label": "Variant picker type",
+            "options": [
+                {
+                    "value": "pills",
+                    "label": "Pills"
+                },
+                {
+                    "value": "pills_color_images",
+                    "label": "Pills color images"
+                }
+            ]
+        },
+        {
+            "type": "select",
+            "id": "prod_img_size",
+            "label": "Image size",
+            "options": [
+                {
+                    "value": "cropped",
+                    "label": "Cropped"
+                },
+                {
+                    "value": "landscape",
+                    "label": "Landscape"
+                },
+                {
+                    "value": "square",
+                    "label": "Square"
+                },
+                {
+                    "value": "portrait",
+                    "label": "Portrait"
+                },
+                {
+                    "value": "circle",
+                    "label": "Circle"
+                }
+            ]
         },
         {
             "type": "checkbox",
@@ -235,12 +383,6 @@
             "default": false,
             "label": "t:sections.main-collection-product-grid.settings.show_rating.label",
             "info": "t:sections.main-collection-product-grid.settings.show_rating.info"
-        },
-        {
-            "type": "checkbox",
-            "id": "enable_quick_add",
-            "default": false,
-            "label": "t:sections.main-collection-product-grid.settings.enable_quick_buy.label"
         },
         {
             "type": "header",
@@ -298,27 +440,47 @@
         },
         {
             "type": "header",
-            "content": "t:sections.all.padding.section_padding_heading"
+            "content": "Style options Product"
+        },
+        {
+            "type": "color",
+            "id": "bg_color",
+            "label": "Background color"
+        },
+        {
+            "type": "color",
+            "id": "title_color",
+            "label": "Title color"
+        },
+        {
+            "type": "color",
+            "id": "text_color",
+            "label": "Text color"
+        },
+        {
+            "type": "color",
+            "id": "link_color",
+            "label": "Link  color"
         },
         {
             "type": "range",
             "id": "padding_top",
             "min": 0,
-            "max": 100,
-            "step": 4,
+            "max": 60,
+            "step": 5,
             "unit": "px",
-            "label": "t:sections.all.padding.padding_top",
-            "default": 36
+            "label": "Padding top",
+            "default": 30
         },
         {
             "type": "range",
             "id": "padding_bottom",
             "min": 0,
-            "max": 100,
-            "step": 4,
+            "max": 60,
+            "step": 5,
             "unit": "px",
-            "label": "t:sections.all.padding.padding_bottom",
-            "default": 36
+            "label": "Padding bottom",
+            "default": 30
         }
     ]
 }
