--- a/snippets/facets.liquid
+++ b/snippets/facets.liquid
@@ -131,7 +131,7 @@
                                         id="Details-{{ forloop.index }}-{{ section.id }}"
                                         class="{% if filter_type == 'horizontal' %}disclosure-has-popup facets__disclosure{% else %} facets__disclosure-vertical{% endif %} js-filter"
                                         data-index="{{ forloop.index }}"
-                                        {% if filter_type == 'vertical' and forloop.index == 1 %}
+                                        {% if filter_type == 'vertical' %}
                                             open
                                         {% endif %}
                                     >
@@ -301,7 +301,7 @@
                                         id="Details-{{ forloop.index }}-{{ section.id }}"
                                         class="{% if filter_type == 'horizontal' %}disclosure-has-popup facets__disclosure{% else %} facets__disclosure-vertical{% endif %} js-filter"
                                         data-index="{{ forloop.index }}"
-                                        {% if filter_type == 'vertical' and forloop.index == 1 %}
+                                        {% if filter_type == 'vertical' %}
                                             open
                                         {% endif %}
                                     >
@@ -1112,10 +1112,10 @@
         <span>{{- 'products.facets.view_as' | t -}}</span>
         <a
             id="grid-btn"
-            class="active main-collections__grid js-grid-view"
+            class="active main-collections__grid js-view-button js-grid-view"
             href="#"
             title="{{- 'products.facets.list' | t -}}"
-            data-original-title="Grid"
+            data-view="grid"
         >
             {%- render 'icons-svg', icons: 'grid' -%}
             {%- render 'icons-svg', icons: 'grid' -%}
@@ -1124,10 +1124,10 @@
         </a>
         <a
             id="list-btn"
-            class="main-collections__list js-list-view"
+            class="main-collections__list js-view-button js-list-view"
             href="#"
             title="{{- 'products.facets.grid' | t -}}"
-            data-original-title="List"
+            data-view="list"
         >
             {%- render 'icons-svg', icons: 'list' -%}
         </a>
