--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -39,6 +39,19 @@
         <span class="price__item price__item--sale">
             {{ money_price }}
         </span>
-        <span class="badge sale">{{ 'products.product.sale' | t }}</span>
+        <span class="badge sale"
+            >-
+            {{-
+                product.selected_or_first_available_variant.compare_at_price
+                | minus: product.selected_or_first_available_variant.price
+                | times: 100.0
+                | divided_by: product.selected_or_first_available_variant.compare_at_price
+                | money_without_currency
+                | replace: ',', '.'
+                | times: 100
+                | remove: '.0'
+            -}}
+            %
+        </span>
     </div>
 </div>
