add list style view, add load more

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -256,6 +256,7 @@ thead {
     .price__box {
         display: flex;
         align-items: center;
+        min-height: 21px;
     }
     .price__item {
         display: inline-block;
