--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -130,7 +130,7 @@
                             {% assign url_handle = value | handle %}
                             <label
                                 for="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}-{{ product.id }}"
-                                {% if is_image %}
+                                {% if is_image and variant.featured_image != blank %}
                                     style="background-image: url({{ variant.featured_image | img_url: img_size, crop: 'center' }})"
                                 {% else %}
                                     style="background-color: {{ value | split: ' ' | last | handle }}; background-image: url({{ url_handle | replace: "-", "_" | append: '.' | append: file_extension | file_url }})"
