--- a/scss/components/component-rating.scss
+++ b/scss/components/component-rating.scss
@@ -1,17 +1,17 @@
 
 .rating {
   display: inline-block;
-  margin: 0;
+  margin: 1rem 0 0 0;
 }
 
 .product .rating-star {
-  --letter-spacing: 0.8;
+  --letter-spacing: 0.4;
   --font-size: 1.7;
 }
 
 .card-product__content .rating-star {
-  --letter-spacing: 0.7;
-  --font-size: 1.4;
+  --letter-spacing: 0.4;
+  --font-size: 1.7;
 }
 
 .rating-star {
@@ -26,7 +26,6 @@
   font-size: calc(var(--font-size) * 1rem);
   line-height: 1;
   display: inline-block;
-  font-family: Times;
   margin: 0;
 }
 
