--- a/scss/pages/section-main-collection.scss
+++ b/scss/pages/section-main-collection.scss
@@ -27,9 +27,13 @@
         &.active {
             color: var(--color-link-hover-text);
         }
+        svg {
+          pointer-events: none;
+        }
     }
     .main-collections__grid svg {
         margin-right: -20px;
+        pointer-events: none;
     }
     .main-collections__grid:last-child svg {
         margin-right: -16px;
@@ -185,6 +189,31 @@
   display: block;
 }
 
+.main-collections.full_width--true .product-grid-container.list {
+  margin: 0;
+  display: block;
+  .template-main-collection__item {
+    max-width: 50%;
+  }
+  .card-product__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .card-product__media-wrapper {
+    max-width: calc(40% - 30px);
+    margin-right: 30px;
+  }
+  .card-product__content {
+    max-width: 60%;
+    width: 100%;
+    padding-top: 10px;
+  }
+}
+
+.facets-wrapper.page-width .facets {
+  width: auto;
+}
+
 .template-main-collection__list {
   display: flex;
   flex-wrap: wrap;
@@ -319,5 +348,44 @@
     height: calc(100% - 20px);
     width: calc(100% - 20px);
     margin: 10px;
+  }
+}
+
+.main-collection__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  @media screen and (max-width: 990px) {
+      display: block;
+      text-align: center;
+  }
+  .pagination-wrapper {
+      -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+      order: 2;
+      margin-left: auto;
+      margin-top: 0 !important;
+      margin-bottom: 0 !important;
+  }
+  .main-collection__product-count{
+      -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+      order: 1;
+      margin-bottom: 0;
+      padding-right: 30px;
+      @media screen and (max-width: 990px) {
+          padding-right: 0;
+          margin-bottom: 3rem;
+          margin-top: 3rem;
+      }
+  }
+  .main-collection__load-more-button {
+      order: 2;
+      margin-left: auto;
   }
 }
