--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -39,7 +39,7 @@
         <span class="price__item price__item--sale">
             {{ money_price }}
         </span>
-        <span class="badge sale"
+        <span class="badge sale js-percentage-badge"
             >-
             {{-
                 product.selected_or_first_available_variant.compare_at_price
