--- a/scss/pages/section-main-collection.scss
+++ b/scss/pages/section-main-collection.scss
@@ -213,6 +213,9 @@
 .facets-wrapper.page-width .facets {
   width: auto;
 }
+.facets-pill {
+  width: 100%!important;
+}
 
 .template-main-collection__list {
   display: flex;
@@ -344,10 +347,20 @@
     background: var(--color-white);
     box-shadow: 0 3px 7px rgba(0,0,0, .15);
   }
-  .card-product__image {
+  .card-product__image,
+  .card-product__image--second {
     height: calc(100% - 20px);
     width: calc(100% - 20px);
     margin: 10px;
+  }
+  .card-product__media::after {
+    content: "";
+    border: solid 10px var(--color-white);
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left:0;
+    top: 0;
   }
 }
 
