add notify form

--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -32,6 +32,10 @@ textarea {
     padding: 1rem 1.5rem;
 }
 
+textarea {
+    resize: none;
+}
+
 input:hover,
 select:hover,
 .custom-select__input:hover,
