--- a/scss/components/component-modal.scss
+++ b/scss/components/component-modal.scss
@@ -7,8 +7,8 @@
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0, .1);
+    backdrop-filter: blur(0.4rem);
 }
 
 
@@ -28,9 +28,9 @@
     width: 32rem; /* Could be more or less, depending on screen size */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
+    -webkit-animation-duration: 0.3s;
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.3s
 }
 
 .js-ajax-cart-request-in-progress .modal__dialog {
@@ -99,12 +99,12 @@
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
+    from {top:53%; opacity:0} 
     to {top:50%; opacity:1}
 }
   
 @keyframes animatetop {
-    from {top:-300px; opacity:0}
+    from {top:53%; opacity:0}
     to {top:50%; opacity:1}
 }
 
