--- a/snippets/form-collection.liquid
+++ b/snippets/form-collection.liquid
@@ -1,14 +1,102 @@
 {% capture "form_id" %}product_form-{{ section.id }}-{{ product.id }}{%- endcapture %}
-{% form 'product', product, id: form_id, class: 'card-product__form' %}
-    {% if product.available and product.variants.size > 1 %}
-        <variant-pills
-            class="swatch-wrap"
-            data-section="{{ section.id }}-{{ product.id }}"
-        >
-            {% render 'swatch' for product.options as swatch, product: product, variant_type: variant_type %}
-            <script type="application/json">
-                {{ product.variants | json }}
-            </script>
+{% if product.available %}
+    {% form 'product', product, id: form_id, class: 'card-product__form' %}
+        {% if product.available and product.variants.size > 1 %}
+            <variant-pills
+                class="swatch-wrap"
+                data-section="{{ section.id }}-{{ product.id }}"
+            >
+                {% render 'swatch' for product.options as swatch, product: product, variant_type: variant_type %}
+                <script type="application/json">
+                    {{ product.variants | json }}
+                </script>
+                <select
+                    name="id"
+                    id="ProductSelect-{{ product.id }}"
+                    class="card-product__variants no-js"
+                    data-product-select
+                >
+                    {% for variant in product.variants %}
+                        {% if variant.available %}
+                            <option
+                                {% if variant == product.selected_or_first_available_variant %}
+                                    selected="selected"
+                                {% endif %}
+                                data-sku="{{ variant.sku }}"
+                                data-qty="{{ variant.inventory_quantity }}"
+                                data-inventory-policy="{{ variant.inventory_policy }}"
+                                value="{{ variant.id }}"
+                            >
+                                {{ variant.title }} - {{ variant.price | money_with_currency }}
+                            </option>
+
+                        {% else %}
+                            <option disabled="disabled">
+                                {{ variant.title }} - {{ 'products.product.sold_out' | t }}
+                            </option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+                {% if show_quantity %}
+                    <div>
+                        <quantity-input class="quantity">
+                            <button
+                                class="quantity__button quantity__button--minus no-js-hidden"
+                                name="minus"
+                                type="button"
+                            >
+                                {% render 'icon-minus' %}
+                            </button>
+                            <input
+                                class="quantity__input quantity-selector js-quantity"
+                                type="number"
+                                name="quantity"
+                                id="Quantity-{{ product.id }}"
+                                min="1"
+                                step="1"
+                                value="1"
+                                {% if product.selected_or_first_available_variant.inventory_management == 'shopify'
+                                    and product.selected_or_first_available_variant.inventory_policy != 'continue'
+                                %}
+                                    max="{{ product.selected_or_first_available_variant.inventory_quantity }}"
+                                {% endif %}
+                            >
+                            <button
+                                class="quantity__button quantity__button--plus no-js-hidden"
+                                name="plus"
+                                type="button"
+                            >
+                                {% render 'icon-plus' %}
+                            </button>
+                        </quantity-input>
+                    </div>
+                {% else %}
+                    <input
+                        class="js-quantity hidden"
+                        type="number"
+                        name="quantity"
+                        min="1"
+                        step="1"
+                        value="1"
+                        {% if product.variants[0].inventory_management == 'shopify'
+                            and product.variants[0].inventory_policy != 'continue'
+                        %}
+                            max="{{ product.variants[0].inventory_quantity }}"
+                        {% endif %}
+                    >
+                {% endif %}
+                <button
+                    type="submit"
+                    name="add"
+                    id="AddToCart-{{ product.id }}"
+                    class="button--secondary js-btn-cart card-product__button-cart"
+                >
+                    <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
+                </button>
+                <div data-ajax-cart-messages="form"></div>
+            </variant-pills>
+
+        {% else %}
             <select
                 name="id"
                 id="ProductSelect-{{ product.id }}"
@@ -22,8 +110,6 @@
                                 selected="selected"
                             {% endif %}
                             data-sku="{{ variant.sku }}"
-                            data-qty="{{ variant.inventory_quantity }}"
-                            data-inventory-policy="{{ variant.inventory_policy }}"
                             value="{{ variant.id }}"
                         >
                             {{ variant.title }} - {{ variant.price | money_with_currency }}
@@ -34,86 +120,6 @@
                     {% endif %}
                 {% endfor %}
             </select>
-            {% if show_quantity %}
-                <div>
-                    <quantity-input class="quantity">
-                        <button
-                            class="quantity__button quantity__button--minus no-js-hidden"
-                            name="minus"
-                            type="button"
-                        >
-                            {% render 'icon-minus' %}
-                        </button>
-                        <input
-                            class="quantity__input quantity-selector js-quantity"
-                            type="number"
-                            name="quantity"
-                            id="Quantity-{{ product.id }}"
-                            min="1"
-                            step="1"
-                            value="1"
-                            {% if product.selected_or_first_available_variant.inventory_management == 'shopify'
-                                and product.selected_or_first_available_variant.inventory_policy != 'continue'
-                            %}
-                                max="{{ product.selected_or_first_available_variant.inventory_quantity }}"
-                            {% endif %}
-                        >
-                        <button class="quantity__button quantity__button--plus no-js-hidden" name="plus" type="button">
-                            {% render 'icon-plus' %}
-                        </button>
-                    </quantity-input>
-                </div>
-            {% else %}
-                <input
-                    class="js-quantity hidden"
-                    type="number"
-                    name="quantity"
-                    min="1"
-                    step="1"
-                    value="1"
-                    {% if product.variants[0].inventory_management == 'shopify'
-                        and product.variants[0].inventory_policy != 'continue'
-                    %}
-                        max="{{ product.variants[0].inventory_quantity }}"
-                    {% endif %}
-                >
-            {% endif %}
-            <button
-                type="submit"
-                name="add"
-                id="AddToCart-{{ product.id }}"
-                class="button--secondary js-btn-cart card-product__button-cart"
-            >
-                <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
-            </button>
-            <div data-ajax-cart-messages="form"></div>
-        </variant-pills>
-
-    {% else %}
-        <select
-            name="id"
-            id="ProductSelect-{{ product.id }}"
-            class="card-product__variants no-js"
-            data-product-select
-        >
-            {% for variant in product.variants %}
-                {% if variant.available %}
-                    <option
-                        {% if variant == product.selected_or_first_available_variant %}
-                            selected="selected"
-                        {% endif %}
-                        data-sku="{{ variant.sku }}"
-                        value="{{ variant.id }}"
-                    >
-                        {{ variant.title }} - {{ variant.price | money_with_currency }}
-                    </option>
-
-                {% else %}
-                    <option disabled="disabled">{{ variant.title }} - {{ 'products.product.sold_out' | t }}</option>
-                {% endif %}
-            {% endfor %}
-        </select>
-        {% if product.available %}
             {% if show_quantity %}
                 <div>
                     <quantity-input class="quantity">
@@ -160,33 +166,38 @@
                 type="submit"
                 name="add"
                 id="AddToCart-{{ product.id }}"
-                class="button--secondary card-product__button-cart"
+                class="button--secondary card-product__button-cart js-btn-cart"
             >
                 <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
             </button>
             <div data-ajax-cart-messages="form"></div>
-        {% else %}
-            {% if notify_me %}
-                <details-open>
-                    <a
-                        class="button button--primary card-product__button-notify js-summary"
-                        href="#notify"
-                        role="button"
-                    >
-                        Notify Me
-                    </a>
-                    <div class="card-product__form js-details">Form</div>
-                </details-open>
-            {% else %}
-                <button
-                    type="button"
-                    id="SoldOutText-{{ product.id }}"
-                    class="button--secondary card-product__button-sold"
-                    disabled=""
-                >
-                    <span id="SoldOutText">{{ 'products.product.sold_out' | t }}</span>
-                </button>
-            {% endif %}
         {% endif %}
+    {% endform %}
+{% else %}
+    {% if notify_me %}
+        <details-open-notify>
+            <a
+                class="button button--primary card-product__button-notify js-summary"
+                href="#notify"
+                role="button"
+            >
+                Notify Me
+            </a>
+            <div class="card-product__notify-form js-details">
+                {% render 'notify-form' %}
+            </div>
+            <div class="card-product__overlay">
+                <span class="visually-hidden">{{ 'accessibility.close' | t }}</span>
+            </div>
+        </details-open-notify>
+    {% else %}
+        <button
+            type="button"
+            id="SoldOutText-{{ product.id }}"
+            class="button--secondary card-product__button-sold"
+            disabled=""
+        >
+            <span id="SoldOutText">{{ 'products.product.sold_out' | t }}</span>
+        </button>
     {% endif %}
-{% endform %}
+{% endif %}
